final cd command